--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "classnames": "^2.3.2",
     "framer-motion": "^11.0.3",
     "gray-matter": "^4.0.3",
@@ -16,6 +17,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-wrap-balancer": "^1.1.0",
     "swr": "^2.2.1",
     "tailwind-merge": "^2.2.1"
